--- a/index.html
+++ b/index.html
@@ -22,6 +22,20 @@
         <div>
             <button id="iniciaPara">Salvar alarme</button>
         </div>
+        <div class="quadrado">
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+        </div>
     </div>
     <script src="index.js"></script>
 </body>
